syntax = "proto3";
package meme;
option go_package = "github.com/BassemHalim/memeDB/proto/memeService";

service MemeService {
  rpc UploadMeme (UploadMemeRequest) returns (MemeResponse);
  rpc UpdateMeme (UpdateMemeRequest) returns (UpdateMemeResponse);
  rpc GetMeme (GetMemeRequest) returns (MemeResponse);
  rpc DeleteMeme (DeleteMemeRequest) returns (DeleteMemeResponse);
  rpc GetTimelineMemes(GetTimelineRequest) returns (MemesResponse);
  rpc FilterMemesByTags(FilterMemesByTagsRequest) returns (MemesResponse);
  rpc SearchMemes(SearchMemesRequest) returns(MemesResponse);
  rpc SearchTags(SearchTagsRequest) returns(TagsResponse);
  rpc AddTags(AddTagsRequest) returns (AddTagsResponse);
  rpc IncrementDownload(IncrementEngagementRequest) returns (IncrementEngagementResponse);
  rpc IncrementShare(IncrementEngagementRequest) returns (IncrementEngagementResponse);
}

message UploadMemeRequest {
  bytes image = 1;
  string media_type = 2;
  repeated string tags = 3;
  string name = 4;
  repeated int32 dimensions = 5; 
  string social_media_url = 6; // optional filed to store the uploaded image URL 
}

message UpdateMemeRequest {
  string id = 1;
  bytes image = 2;
  string media_type = 3;
  repeated string tags = 4;
  string name = 5;
  repeated int32 dimensions = 6; 
  string social_media_url = 7; // optional filed to store the uploaded image URL 
}

message GetMemeRequest {
  string id = 1;
}
message DeleteMemeRequest{
  string id = 1;
}

message GetTimelineRequest{
  int32 page = 1;
  int32 page_size = 2;
  SortOrder sort_order = 3;
}

message FilterMemesByTagsRequest {
  repeated string tags = 1;
  TagMatchType match_type = 2;
  int32 page = 3;
  int32 page_size = 4;
  SortOrder sort_order = 5;
}

message SearchMemesRequest{
  string query = 1;
  int32 page = 3;
  int32 page_size = 4;
}

message SearchTagsRequest{
  string query = 1;
  int32 limit = 2;
}
message AddTagsRequest{
  string meme_id = 1;
  repeated string tags = 2;
}
message AddTagsResponse{
  int32 success = 1;
}

message TagsResponse{
  repeated string tags = 1;
}

message IncrementEngagementRequest {
  string meme_id = 1;
}

message IncrementEngagementResponse {
  bool success = 1;
  string error = 2;
}

// Response messages
message MemeResponse {
  string id = 1;
  string media_url = 2;
  string media_type = 3;
  string name = 4;
  repeated string tags = 5;
  repeated int32 dimensions = 6;
  int32 download_count = 7;
  int32 share_count = 8;
}

message DeleteMemeResponse{
  bool success = 1;
}

message UpdateMemeResponse{
  bool success = 1;
}

message MemesResponse {
  repeated MemeResponse memes = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 total_pages = 4;
}


enum TagMatchType {
  ANY = 0;  // Match memes that have any of the specified tags
  ALL = 1;  // Match memes that have all of the specified tags
}

enum SortOrder {
  NEWEST = 0;
  OLDEST = 1;
  MOST_TAGGED = 2;
  MOST_DOWNLOADED = 3;
  MOST_SHARED = 4;
}